// üêª‚Äç‚ùÑÔ∏èüêæ analytics-protobufs: Protocol Buffers for Noelware Analytics
// Copyright (c) 2022 Noelware
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in all
// copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
// SOFTWARE.

syntax = "proto3";

package noelware.analytics.protobufs;
option java_package = "org.noelware.analytics.protobufs.v1";
option java_multiple_files = true;
option go_package = "internal/protobufs";
option objc_class_prefix = "ANLY";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message ConnectionAckRequest {}
message ConnectionAckResponse {
  bool connected = 1;
  string instanceUUID = 2;
}

message ReceiveStatsRequest {}
message ReceiveStatsResponse {
  string product = 1;
  string version = 2;

  // commitSha and buildDate are usually only for Noelware's products.
  optional string commitSha = 3;
  optional string buildDate = 4;
  google.protobuf.Timestamp snapshotDate = 5;
  BuildFlavour buildFlavour = 6;
  google.protobuf.Struct data = 7;
}

enum BuildFlavour {
  DOCKER = 0; // product was distributed using Docker.
  KUBERNETES = 1; // product was distributed from Helm Charts or any Kubernetes operator.
  DEB = 2; // product was distributed as Deb.
  RPM = 3; // product was distributed as RPM.
  GIT = 4; // product was built from a Git repository
  ENTERPRISE = 6; // the product is a enterprise product.
}

service Analytics {
  rpc ConnectionAck(ConnectionAckRequest) returns (ConnectionAckResponse);
  rpc RetrieveStats(ReceiveStatsRequest) returns (ReceiveStatsResponse);
}
